--- a/ZEN/ADMIN/SmartPay.AdminBlazor/Pages/Index.razor
+++ b/ZEN/ADMIN/SmartPay.AdminBlazor/Pages/Index.razor
@@ -120,7 +120,7 @@
             _loadingQuote = true;
 
             // Create request with required Idempotency-Key header
-            var request = new HttpRequestMessage(HttpMethod.Post, "/api/fx/quote");
+            var request = new HttpRequestMessage(HttpMethod.Post, "/v1/fx/quotes");
             request.Headers.Add("Idempotency-Key", Guid.NewGuid().ToString());
             request.Content = JsonContent.Create(new { fromCurrency = "USD", toCurrency = "GBP", amount = _amount });
 
